- [M] drivers/tty/tty_ldisc.c			[D] Line discipline layer
- [M] drivers/console/console.c			[D] Bind to standard termios
- [M] scripts/Kbuild.include			[D] Add colorful output support
- [M] Makefile					 >  new "make M=..."


Mon Nov 23 10:47:52 CST 2015
- [+] block/Makefile				[D] It's time
- [+] block/Kconfig
- [+] drivers/block/Makefile
- [+] drivers/block/Kconfig
- [+] drivers/char/Makefile
- [+] drivers/char/Kconfig
- [M] Makefile					[D] Colorful "make help"
- [M] arch/x86/boot/tools/build.c		[D] Colorful message


Sat Nov 28 18:14:12 CST 2015
- [+] Diary/11-28-2015


Mon Dec 14 15:20:42 CST 2015
- [M] Makefile					[D] Add a new warning flag, -Wsizeof-array-argument
-						 >  Why? I read the LKML mailing list, there is a
-						 >  mail came from Linus, which mentioned this might be a
-						 >  a big problem! https://lkml.org/lkml/2015/9/3/428

Mon Jan 11 19:57:25 CST 2016
- [M] drivers/tty/tty_io.c
- [M] drivers/tty/tty_ldisc.c


Tue Jan 12 22:57:59 CST 2016
- [+] include/sandix/spinlock_up.h
- [+] include/sandix/spinlock_smp.h
- [+] include/sandix/typecheck.h		[D] typecheck() is just a compile time warning
- [M] include/sandix/spinlock.h


Wed Jan 13 10:59:20 CST 2016
- [+] include/sandix/irqflags.h			[D] local_irq_disable/enable
- [+] arch/x86/include/asm/irqflags.h		 >  local_irq_save/restore
- [+] Documentation/locking/
- [M] arch/x86/config/i386_defconfig		[D] add CONFIG_X86_SPINLOCK_TICKET
- [M] arch/x86/include/asm/spinlock.h
- [M] include/sandix/spinlock_up.h		[D] Finished
- [M] include/sandix/spinlock_smp.h
- [M] include/sandix/spinlock.h			[D] Generic spinlock APIs


Thu Jan 14 14:14:17 CST 2016
- [+] include/sandix/slab.h			[D] kmalloc kfree (empty)
- [+] include/sandix/err.h			[D] IS_ERR things
- [+] scripts/Lindent
- [M] arch/x86/include/asm/spinlock.h		[D] basic spinlock finished
- [M] drivers/tty/tty_ldisc.c
- [M] drivers/tty/n_tty.c			[D] new functions
- [M] include/sandix/tty.h			[D] new ldisc_ops: open, close